[gd_scene load_steps=2 format=3 uid="uid://d0f1bnd2rwmp8"]

[ext_resource type="Script" path="res://58b.gd" id="1_pnd1d"]

[node name="58b" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pnd1d")

[node name="Label4" type="Label" parent="."]
layout_mode = 0
offset_left = 235.0
offset_top = 22.0
offset_right = 634.0
offset_bottom = 312.0

[node name="B" type="Label" parent="."]
layout_mode = 0
offset_left = 52.0
offset_top = 64.0
offset_right = 69.0
offset_bottom = 90.0
text = "B:"

[node name="C" type="Label" parent="."]
layout_mode = 0
offset_left = 53.0
offset_top = 104.0
offset_right = 70.0
offset_bottom = 130.0
text = "C:"

[node name="A" type="Label" parent="."]
layout_mode = 0
offset_left = 54.0
offset_top = 30.0
offset_right = 71.0
offset_bottom = 56.0
text = "A:"

[node name="Line" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 77.0
offset_top = 24.0
offset_right = 144.063
offset_bottom = 55.0

[node name="B2" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 79.0
offset_top = 64.0
offset_right = 146.063
offset_bottom = 95.0

[node name="Cc" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 80.0
offset_top = 104.0
offset_right = 147.063
offset_bottom = 135.0

[node name="Clear" type="Button" parent="."]
layout_mode = 0
offset_left = 49.0
offset_top = 215.0
offset_right = 187.0
offset_bottom = 265.0
text = "clear"

[node name="Calculate" type="Button" parent="."]
layout_mode = 0
offset_left = 41.0
offset_top = 169.0
offset_right = 187.0
offset_bottom = 205.0
text = "Calculate"

[node name="exit" type="Button" parent="."]
layout_mode = 0
offset_left = 36.0
offset_top = 279.0
offset_right = 191.0
offset_bottom = 322.0
text = "exit"

[connection signal="pressed" from="Clear" to="." method="_on_clear_pressed"]
[connection signal="pressed" from="Calculate" to="." method="_on_calculate_pressed"]
[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
